# smartini

./: .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  smartini.py
.github/workflows/: black.yml
nomopytools/: collections_extensions.py  func.py
src/: args.py  entities.py  exceptions.py  globals.py  interface.py  interface.pyi  proxies.py  slots.py  utils.py  warn.py
src/nomotools/: collections.py
src/smartini/: __init__.py  args.py  entities.py  exceptions.py  exceptions_warnings.py  globals.py  interface.py  interface.pyi  slots.py  utils.py  valtypes.py
src/smartini/type_converters/: __init__.py  converters.py  exceptions.py  type_annotations.py  type_hints.py
tests/: base.py  test_parameters.py
