[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smartini"
version = "1.1.3"
authors = [{ name = "Tilman Hornung", email = "mail@tilmanhornung.de" }]
description = "A simple, yet fully-featured python library to work with INI configuration files."
keywords = [
    "ini",
    "config",
    "configuration",
    "settings",
    "user interface",
    "interface",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["charset-normalizer>=3.3.2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: MS-DOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: SunOS/Solaris",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Desktop Environment",
    "Topic :: Education",
    "Topic :: Education :: Testing",
    "Topic :: Home Automation",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]

[project.urls]
changelog = "https://github.com/t1h0/smartini/releases"
issues = "https://github.com/t1h0/smartini/issues"
homepage = "https://github.com/t1h0/smartini"
repository = "https://github.com/t1h0/smartini"
